<resources>
    <string name="app_name">Itenary</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_itinerary_display">ItineraryDisplay</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="no_account_yet">No account yet? Create one</string>
    <string name="account_creation">Create Account</string>
    <string name="existing_account">Already have an account? Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="logo_description">Logo</string>
    <string name="title_activity_new_itinerary">newItinerary</string>
    <string name="title_activity_enter_title_of_trip">EnterTitleOfTrip</string>
    <string name="databaseURL">https://itenary-dc075.firebaseio.com/</string>
    <string name="xmlType"><u>Type of trip:</u></string>
    <string name="xmlDate"><u>Date:</u></string>
    <string name="xmlTime"><u>Time:</u></string>
    <string name="xmlDuration"><u>Duration:</u></string>
    <string name="xmlCost"><u>Price:</u></string>
    <string name="xmlCurrency"><u>Currency:</u></string>
    <string name="hint_type">Select the type of activity</string>
</resources>
